# thive

./: CMakeLists.txt  CPPLINT.cfg
assets/: sample.yaml
include/: main.h  main.hpp  parser.h  parser.hpp
scripts/: build.sh  lint.sh
src/: main.cpp  parser.cpp
